Fix: List item alignment now that there are more presidents

--- a/app/assets/stylesheets/design/presidential_documents.scss
+++ b/app/assets/stylesheets/design/presidential_documents.scss
@@ -83,6 +83,7 @@
         float: left;
         line-height: 20px;
         margin-right: 20px;
+        margin-top: 10px;
       }
     }
   }
